--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,9 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 img {
@@ -16,6 +19,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 10px;
 }
 
 input {
@@ -23,5 +27,31 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
-  margin-bottom: 16px;
+}
+.header, .footer {
+   display: flex;
+   justify-content: space-between;
+   padding: 16px;
+}
+.footer {
+  background-color: #eeeeee
+}
+.right-links, .left-links
+{
+  display: flex; 
+  list-style: none;
+  margin: 0px;
+  gap: 16px;
+  padding: 0px;
+}
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+}
+a {
+  text-decoration: none;
+  font-weight: bold;
+  color: #676666
 }
